Quitando notas en ingles.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 
             <iframe width="480" height="360" src="http://www.youtube.com/embed/rDI-vrmCfHY" frameborder="0" allowfullscreen></iframe>
 
-
             <p>Durante el Tercer Evento de Software Libre y Economía Social que realizamos en el Centro Cultural de la Cooperación (Av. Corrientes 1543, Ciudad de Buenos Aires), llevamos adelante un hackaton con la idea de ayudar a hacer visibles los "números del cooperativismo" en el país. Este video representa en formato time-lapse toda la mañana en la que estuvimos trabajando para este objetivo.</p>
 
             <h3>Repositorio</h3>
@@ -42,26 +41,15 @@
             siguientes comandos:
 
 <pre><code>git clone https://github.com/gcoop-libre/CoopViz.git</code></pre>
-
-            <h3>Authors and Contributors</h3>
-
-            <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-            <h3>Support or Contact</h3>
-
-            <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
             </section>
         </div>
 
         <!-- FOOTER  -->
         <div id="footer_wrap" class="outer">
             <footer class="inner">
-            <p class="copyright">Coopviz maintained by <a href="https://github.com/gcoop-libre">gcoop-libre</a></p>
-            <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+            <p>Publicaod con <a href="http://pages.github.com">GitHub Pages</a></p>
             </footer>
         </div>
-
-
 
     </body>
 </html>
