--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
             siguientes comandos:
 
 <pre><code>git clone https://github.com/gcoop-libre/CoopViz.git</code></pre>
+
             </section>
         </div>
 
         <!-- FOOTER  -->
         <div id="footer_wrap" class="outer">
             <footer class="inner">
-            <p>Publicaod con <a href="http://pages.github.com">GitHub Pages</a></p>
+            <p>Publicado con <a href="http://pages.github.com">GitHub Pages</a></p>
+
             </footer>
         </div>
 
