agregando listado de dos proyectos

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
 
 <pre><code>git clone https://github.com/gcoop-libre/CoopViz.git</code></pre>
 
+
+            <h3>Proyectos</h3>
+
+            <ul>
+                <li><a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>Visualización sobre la fundación de cooperativas (usando Gourse)</a>
+                <li><a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>Ubicación geográfica de las cooperativas (usando cartodb)</a>
+            </ul>
+
             </section>
         </div>
 
