colocando texto a la sección de ejemplos

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h2 id="project_tagline">Repositorio del hackaton del tercer evento de Software Libre y Economia Social 2012</h2>
 
             <section id="downloads">
-            <a class="zip_download_link" href="https://github.com/gcoop-libre/CoopViz/zipball/master">Bajar este proyecto como archivo .zip</a>
-            <a class="tar_download_link" href="https://github.com/gcoop-libre/CoopViz/tarball/master">Bajar este proyecto como archivo tar.gz</a>
+                <a class="zip_download_link" href="https://github.com/gcoop-libre/CoopViz/zipball/master">Bajar este proyecto como archivo .zip</a>
+                <a class="tar_download_link" href="https://github.com/gcoop-libre/CoopViz/tarball/master">Bajar este proyecto como archivo tar.gz</a>
             </section>
             </header>
         </div>
@@ -44,6 +44,9 @@
 
 
             <h3>Proyectos</h3>
+
+            <p>En la jornada logramos materializar varios proyectos, esta es una lista
+            de los resultados:
 
             <ul>
                 <li><a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>Visualización sobre la fundación de cooperativas (usando Gourse)</a>
