Agrego video de Osi

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
-            <h3>Video</h3>
+            <h3>Time-lapse</h3>
 
             <iframe width="640" height="480" src="http://www.youtube.com/embed/rDI-vrmCfHY" frameborder="0" allowfullscreen></iframe>
 
             <p>Durante el Tercer Evento de Software Libre y Economía Social que realizamos en el Centro Cultural de la Cooperación (Av. Corrientes 1543, Ciudad de Buenos Aires), llevamos adelante un hackaton con la idea de ayudar a hacer visibles los "números del cooperativismo" en el país. Este video representa en formato time-lapse toda la mañana en la que estuvimos trabajando para este objetivo.</p>
+
 
             <h3>Repositorio</h3>
 
@@ -48,11 +49,16 @@
             <p>En la jornada logramos materializar varios proyectos, esta es una lista
             de los resultados:
 
-            <ul>
-                <li><a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>Visualización sobre la fundación de cooperativas (usando Gourse)</a>
-                <li><a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>Ubicación geográfica de las cooperativas (usando cartodb)</a>
-            </ul>
+            <h5>Visualización del Nacimiento de Cooperativas y Federaciones entre 1927 y 2008</h5>
 
+            <iframe width="640" height="480" src="http://www.youtube.com/embed/4gRaXSsGTQw" frameborder="0" allowfullscreen></iframe>
+            
+            <a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>Visualización sobre la fundación de cooperativas (usando Gourse)</a>
+
+            <h5>Ubicación Geográfica de las cooperativas</h5>
+            <br>
+            <a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>Ubicación geográfica de las cooperativas (usando cartodb)</a>
+                        
             </section>
         </div>
 
