timeline parcial con las primeras 2000 cooperativas
Subo la versión que se mostró en el evento. Agrego un readme con
información y elimino archivos que no se usan.

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -4,6 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <script src="api/timeline-api.js" type="text/javascript"></script>
     <script src="timeline.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="api/styles/ethers.css" />
+    <link rel="stylesheet" href="api/styles/events.css" />
+    <link rel="stylesheet" href="api/styles/timeline.css" />
     <link rel="stylesheet" href="timeline.css" />
   </head>
   <body>
