Agregando imagen para previsualizar el mapa.

--- a/index.html
+++ b/index.html
@@ -55,14 +55,34 @@
             
             <a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>Visualización sobre la fundación de cooperativas (usando Gourse)</a>
 
-            <h5>Ubicación Geográfica de las cooperativas</h5>
-            <br>
-            <a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>Ubicación geográfica de las cooperativas (usando cartodb)</a>
+
+            <div>
+                <a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>
+                <img class='preview' src='static/mapa.png'/>
+                </a>
+
+                <div>
+
+                <h5>Ubicación Geográfica de las cooperativas</h5>
+                <a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>» Ver demostración interactiva</a>
+
+                <p>
+                El mapa permite visualizar la locación geográfica de varias cooperativas, pero también
+                brinda detalles de cada una cuando el usuario hace click en alguno de los puntos.
+
+                <p>
+                Para crear el mapa se ha utilizado el sistema <a href="http://cartodb.com/">CartoDB</a>
+                y la información que genera el
+                <a href='https://github.com/gcoop-libre/CoopViz/blob/master/geolocalizar.py'>script de locación geográfica</a>.
+                </div>
+            </div>
+
+
+
                         
             </section>
         </div>
 
-        <!-- FOOTER  -->
         <div id="footer_wrap" class="outer">
             <footer class="inner">
             <p>Publicado con <a href="http://pages.github.com">GitHub Pages</a></p>
