Agregando imagen para el proyecto de visualización de nacimiento de cooperativas.

--- a/index.html
+++ b/index.html
@@ -41,20 +41,33 @@
             <p>Para obtener el repositio completo del código completo puedes ejecutar los
             siguientes comandos:
 
-<pre><code>git clone https://github.com/gcoop-libre/CoopViz.git</code></pre>
-
+            <pre>git clone https://github.com/gcoop-libre/CoopViz.git</pre>
 
             <h3>Proyectos</h3>
 
             <p>En la jornada logramos materializar varios proyectos, esta es una lista
             de los resultados:
 
-            <h5>Visualización del Nacimiento de Cooperativas y Federaciones entre 1927 y 2008</h5>
+            <div>
+                <a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>
+                <img class='preview' src='static/animacion.png'/>
+                </a>
 
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/4gRaXSsGTQw" frameborder="0" allowfullscreen></iframe>
-            
-            <a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>Visualización sobre la fundación de cooperativas (usando Gourse)</a>
+                <div>
+                    <h5>Visualización del Nacimiento de Cooperativas</h5>
+                    <a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>» Ver reseña completa</a><br/>
+                    <a href='http://youtu.be/4gRaXSsGTQw'>» Ver video</a><br/>
 
+                    <p>La visualización nos ha permitido observar el nacimiento de cooperativas y federaciones entre los años 1927 y 2008.
+
+                    <p>El <a href='http://osiux.com.ar/2012-06-14-visualizando-cooperativas-de-argentina.txt'>sitio web de osiux</a>
+                    tiene una reseña super completa sobre cómo se realizó la visualización
+                    usando (Gourse).
+                </div>
+            </div>
+
+            <div class="clear">
+            </div>
 
             <div>
                 <a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>
@@ -62,23 +75,19 @@
                 </a>
 
                 <div>
+                    <h5>Ubicación Geográfica de las cooperativas</h5>
+                    <a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>» Ver demostración interactiva</a>
 
-                <h5>Ubicación Geográfica de las cooperativas</h5>
-                <a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>» Ver demostración interactiva</a>
+                    <p>
+                    El mapa permite visualizar la locación geográfica de varias cooperativas, pero también
+                    brinda detalles de cada una cuando el usuario hace click en alguno de los puntos.
 
-                <p>
-                El mapa permite visualizar la locación geográfica de varias cooperativas, pero también
-                brinda detalles de cada una cuando el usuario hace click en alguno de los puntos.
-
-                <p>
-                Para crear el mapa se ha utilizado el sistema <a href="http://cartodb.com/">CartoDB</a>
-                y la información que genera el
-                <a href='https://github.com/gcoop-libre/CoopViz/blob/master/geolocalizar.py'>script de locación geográfica</a>.
+                    <p>
+                    Para crear el mapa se ha utilizado el sistema <a href="http://cartodb.com/">CartoDB</a>
+                    y la información que genera el
+                    <a href='https://github.com/gcoop-libre/CoopViz/blob/master/geolocalizar.py'>script de locación geográfica</a>.
                 </div>
             </div>
-
-
-
                         
             </section>
         </div>
