Agrego linea de tiempo de unixono

--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
                     <a href='https://github.com/gcoop-libre/CoopViz/blob/master/geolocalizar.py'>script de locación geográfica</a>.
                 </div>
             </div>
+            <div>
+                <a href='lineadetiempo/lineadetiempo.html'>
+                <img class='preview' src='static/lineatiempo_1.png'/>
+                </a>
+
+                <div>
+                    <h5>Linea de tiempo de Creación de cooperativas</h5>
+                    <a href='lineadetiempo/lineadetiempo.html'>» Ver demostración interactiva</a>
+
+                    <p>
+
+                    Esta linea de tiempo permite ver secuencialmente la fundación de cooperativas y los datos asociados a las mismas
+                    <p>
+                    Los datos fueron procesados con la herramienta <a href='http://code.google.com/p/google-refine/'>Google Refine</a>
+                </div>
+            </div>
                         
             </section>
         </div>
