modificando el footer de la pagina y otros arreglos menores.

--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
 
             <iframe width="640" height="480" src="http://www.youtube.com/embed/rDI-vrmCfHY" frameborder="0" allowfullscreen></iframe>
 
-            <p>Durante el Tercer Evento de Software Libre y Economía Social que realizamos en el Centro Cultural de la Cooperación (Av. Corrientes 1543, Ciudad de Buenos Aires), llevamos adelante un hackaton con la idea de ayudar a hacer visibles los "números del cooperativismo" en el país. Este video representa en formato time-lapse toda la mañana en la que estuvimos trabajando para este objetivo.</p>
+            <p>Durante el <a href='http://www.gcoop.coop/sles-2012'>Tercer Evento de Software Libre y Economía Social</a> que realizamos en el Centro Cultural de la Cooperación (<a href='http://maps.google.com.ar/maps?q=Av.+Corrientes+1543,+Ciudad+de+Buenos+Aires&hl=es-419&ie=UTF8&sll=-38.341656,-63.28125&sspn=59.111319,135.087891&hnear=Av+Corrientes+1543,+San+Nicol%C3%A1s,+Buenos+Aires&t=m&z=17'>Av. Corrientes 1543, Ciudad de Buenos Aires</a>), llevamos adelante un hackaton con la idea de ayudar a hacer visibles los "números del cooperativismo" en el país. Este video representa en formato time-lapse toda la mañana en la que estuvimos trabajando para este objetivo.</p>
 
 
             <h3>Repositorio</h3>
 
-            <p>Para obtener el repositio completo del código completo puedes ejecutar los
-            siguientes comandos:
+            <p>Para obtener el repositio completo del código completo puedes ejecutar el
+            siguiente comando:
 
             <pre>git clone https://github.com/gcoop-libre/CoopViz.git</pre>
+
+            <p>O bien, <a href='https://github.com/gcoop-libre'>visitar el repositorio</a> desde la web.
 
             <h3>Proyectos</h3>
 
@@ -110,8 +112,7 @@
 
         <div id="footer_wrap" class="outer">
             <footer class="inner">
-            <p>Publicado con <a href="http://pages.github.com">GitHub Pages</a></p>
-
+            <p>Realizado durante el evento <a href='http://www.gcoop.coop/sles-2012'>sles-2012</a> por miembros <a href='http://www.facttic.org.ar/'>FACTTIC</a>.
             </footer>
         </div>
 
