Agregando la segunda linea de tiempo.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                 </div>
             </div>
 
-            <div class="clear">
-            </div>
+            <div style='clear:both'/>
 
             <div>
                 <a href='https://cooperativas.cartodb.com/tables/cooperativas/embed_map'>
@@ -90,13 +89,16 @@
                     <a href='https://github.com/gcoop-libre/CoopViz/blob/master/geolocalizar.py'>script de locación geográfica</a>.
                 </div>
             </div>
+
+            <div style='clear:both'/>
+
             <div>
                 <a href='lineadetiempo/lineadetiempo.html'>
                 <img class='preview' src='static/lineatiempo_1.png'/>
                 </a>
 
                 <div>
-                    <h5>Linea de tiempo de Creación de cooperativas</h5>
+                    <h5>Presentacion linea de tiempo de Creación de cooperativas</h5>
                     <a href='lineadetiempo/lineadetiempo.html'>» Ver demostración interactiva</a>
 
                     <p>
@@ -106,7 +108,28 @@
                     Los datos fueron procesados con la herramienta <a href='http://code.google.com/p/google-refine/'>Google Refine</a>
                 </div>
             </div>
+
+            <div style='clear:both'/>
                         
+            <div>
+                <img class='preview' src='static/lineatiempo_ariel.png'/>
+
+                <div>
+                    <h5>Linea de tiempo de Creación de cooperativas</h5>
+
+                    <p>
+                    Muestra la creación de las primeras ~2000 cooperativas y federaciones, cubriendo aproximadamente
+                    desde el año 1929 hasta 1970.
+
+                    <p>
+                    Para armarla se utilizó la biblioteca <a href="http://www.simile-widgets.org">SIMILE Widgets</a>
+                    y para preparar los datos se utilizó <a href="http://code.google.com/p/google-refine/">Google Refine</a>.
+
+                </div>
+            </div>
+
+            <div style='clear:both'/>
+
             </section>
         </div>
 
