--- a/index.html
+++ b/index.html
@@ -110,7 +110,23 @@
             </div>
 
             <div style='clear:both'/>
-                        
+            <div>
+                <a href='grafo_federaciones.html'>
+                <img class='preview' src='static/grafo_1.png'/>
+                </a>
+
+                <div>
+                    <h5>Grafo Interactivo de Federaciones y Cooperativas</h5>
+                    <a href='grafo_federaciones.html'>» Ver demostración interactiva</a>
+
+                    <p>
+
+                    Este ejemplo permita navegar las cooperativas de Facttic y Fecootra, viendo las relaciones entre ellas 
+                    <p>
+                    Para la visualización se utilizó la biblioteca de visualizaciones <a href='http://thejit.org/'>InfoViz Toolkit</a>
+                </div>
+            </div>
+            <div style='clear:both'/>
             <div>
                 <img class='preview' src='static/lineatiempo_ariel.png'/>
 
